# sentinel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/gateway/: .env.example  Dockerfile  pyproject.toml
apps/gateway/src/gateway/: __init__.py  main.py
apps/gateway/src/gateway/api/v1/: cameras.py  copilot.py  health.py  router.py  state.py  ws.py
apps/gateway/src/gateway/core/: config.py  di.py  warehouse_state_broadcaster.py
apps/gateway/tests/: test_cameras_proxy.py  test_copilot_proxy.py  test_health.py  test_state_proxy.py  test_warehouse_state_broadcaster.py  test_ws.py
apps/web/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json
infra/postgres/: init.sql
libs/sentinel_common/: pyproject.toml
libs/sentinel_common/src/sentinel_common/: __init__.py  config.py  di.py  errors.py  logging.py
libs/sentinel_common/src/sentinel_common/db/: __init__.py  base.py  session.py
libs/sentinel_common/src/sentinel_common/schemas/: __init__.py  camera.py  common.py  detection.py  entity.py  event.py  frame.py  zone.py
libs/sentinel_common/tests/: test_config.py
services/agent/: .env.example  Dockerfile  pyproject.toml
services/agent/tests/: test_copilot.py  test_copilot_api.py  test_evidence.py  test_grounding.py  test_health.py  test_llm_client.py  test_memory_client.py  (+2 more)
services/events/: .env.example  Dockerfile  pyproject.toml
services/events/src/events/: __init__.py  main.py
services/events/src/events/api/v1/: detections.py  health.py  router.py
services/events/src/events/core/: config.py  di.py  event_engine.py  ingest_service.py
services/events/src/events/domain/: event_rule.py  zone.py  zone_engine.py
services/events/src/events/infra/: memory_client.py  polygon_zone_engine.py  rule_engine.py
services/events/tests/: test_detections_api.py  test_event_engine.py  test_health.py  test_ingest_service.py  test_memory_client.py  test_zone_engine.py  test_zone_geometry.py
services/ingestion/: .env.example  Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: __init__.py  main.py
services/ingestion/src/ingestion/api/v1/: health.py  router.py  streams.py
services/ingestion/src/ingestion/core/: config.py  di.py  frame_broadcaster.py  stream_registry.py
services/ingestion/src/ingestion/domain/: camera.py
services/ingestion/src/ingestion/infra/: opencv_capture.py  rtsp_client.py  stats.py
services/ingestion/tests/: test_frame_broadcaster.py  test_health.py  test_opencv_capture.py  test_stats.py  test_streams_api.py
services/memory/: .env.example  Dockerfile  pyproject.toml
services/memory/migrations/: env.py
services/memory/migrations/versions/: 66ab99299a05_initial_schema.py
services/memory/src/memory/: __init__.py  main.py
services/memory/src/memory/api/v1/: alerts.py  entities.py  events.py  health.py  router.py  state.py  zones.py
services/memory/src/memory/core/: config.py  di.py  warehouse_memory_service.py
services/memory/src/memory/domain/: alert.py  entity.py  repository.py  state.py  zone_occupancy.py
services/memory/src/memory/infra/: models.py  repositories.py
services/memory/tests/: conftest.py  test_alert_repository.py  test_api.py  test_entity_repository.py  test_event_repository.py  test_health.py  test_warehouse_memory_service.py  test_zone_occupancy_repository.py
services/vision/: .env.example  Dockerfile  pyproject.toml
services/vision/src/vision/: __init__.py  main.py
services/vision/src/vision/api/v1/: health.py  router.py
services/vision/src/vision/core/: config.py  detection_runner.py  di.py  pipeline.py
services/vision/src/vision/domain/: detector.py  tracker.py
services/vision/src/vision/infra/: byte_tracker.py  events_client.py  mjpeg_client.py  yolo_detector.py
services/vision/tests/: test_byte_tracker.py  test_detection_runner.py  test_events_client.py  test_health.py  test_mjpeg_client.py  test_pipeline.py  test_yolo_detector.py
(+42 files in other folders)
