[project]
name = "sentinel-memory"
version = "0.1.0"
description = "Persists structured warehouse memory (cameras, detections, events) in PostgreSQL and exposes query APIs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "sentinel-common",
]

[tool.uv.sources]
sentinel-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]
