[project]
name = "sentinel-vision"
version = "0.1.0"
description = "Runs YOLO-based object detection/tracking over frames to produce structured detections"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "ultralytics>=8.3",
    "opencv-python-headless>=4.10",
    "numpy>=2.1",
    "httpx>=0.27",
    "sentinel-common",
]

[tool.uv.sources]
sentinel-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision"]
